fixed scrollbar styling across app

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 @import "./style.scss";
 
 .App {
-
+  // overflow: scroll;
 }
+
 .app-input-container {
   grid-column: 8;
   display: flex;
@@ -30,4 +31,15 @@
   width: 3em;
 }
 
-
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: $tan;
+}
+::-webkit-scrollbar-button:vertical:decrement {
+  background: $darkBlue;
+  height: 4.5em;
+  width: 0;
+}
